raname all slitchar to charslit

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.15...3.27)
 
-project(slitchar LANGUAGES C CXX)
+project(charslit LANGUAGES C CXX)
 
 # Find Python
 find_package(Python 3.11 REQUIRED COMPONENTS Interpreter Development.Module)
@@ -22,7 +22,7 @@ find_package(nanobind CONFIG REQUIRED)
 
 # Create nanobind extension module
 nanobind_add_module(
-  slitchar
+  charslit
   STABLE_ABI
   NB_STATIC
   slitdec/slitdec_wrapper.cpp
@@ -32,9 +32,9 @@ nanobind_add_module(
 # Explicitly set language for C file
 set_source_files_properties(slitdec/slitdec.c PROPERTIES LANGUAGE C)
 
-target_include_directories(slitchar PRIVATE
+target_include_directories(charslit PRIVATE
   ${CMAKE_CURRENT_SOURCE_DIR}/slitdec
 )
 
 # Install the extension module
-install(TARGETS slitchar LIBRARY DESTINATION .)
+install(TARGETS charslit LIBRARY DESTINATION .)
